<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/download"
    tools:context=".view.IntroView">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="385dp"
        android:layout_height="154dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/to_start_your_gym_journey"
        android:textColor="#CAC1B8"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="313dp"
        android:layout_height="74dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/all_you_need"
        android:textColor="#CAC1B8"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="155dp"
        android:layout_height="52dp"
        android:layout_marginTop="560dp"
        android:layout_marginEnd="224dp"
        android:backgroundTint="#273840"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#CAC1B8"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="155dp"
        android:layout_height="52dp"
        android:backgroundTint="#273840"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textColor="#CAC1B8"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="560dp" />
</androidx.constraintlayout.widget.ConstraintLayout>