<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C9C0B7"
    tools:context=".view.SignUpCView">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="78dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/log_in"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/sign_up"
        android:textColor="#273840"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="270dp"
        android:layout_marginTop="90dp"
        />



    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:fontFamily="@font/akaya_telivigala"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:fontFamily="@font/akaya_telivigala"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintMarginEnd="39dp"
        app:layout_constraintMarginStart="39dp"
        app:layout_constraintMarginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        android:fontFamily="@font/akaya_telivigala"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintMarginEnd="39dp"
        app:layout_constraintMarginStart="39dp"
        app:layout_constraintMarginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPhone" />
    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text"
        android:fontFamily="@font/akaya_telivigala"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintMarginEnd="39dp"
        app:layout_constraintMarginStart="39dp"
        app:layout_constraintMarginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextText2" />

    <EditText
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/postal_code"
        android:inputType="textPostalAddress"
        android:fontFamily="@font/akaya_telivigala"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintMarginEnd="39dp"
        app:layout_constraintMarginStart="39dp"
        app:layout_constraintMarginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextDate" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/date_of_birth"
        android:fontFamily="@font/akaya_telivigala"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintMarginEnd="39dp"
        app:layout_constraintMarginStart="39dp"
        app:layout_constraintMarginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextText3" />

    <Button
        android:id="@+id/button1"
        android:layout_width="332dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#273840"
        android:fontFamily="@font/akaya_telivigala"
        android:shadowColor="#273840"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#D6CDC4"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintMarginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPostalAddress" />

    <Button
        android:id="@+id/button2"
        android:layout_width="340dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#C8BFB6"
        android:fontFamily="@font/akaya_telivigala"
        android:text="Google     "
        android:textAlignment="center"
        android:textColor="#273840"
        android:textSize="24sp"
        app:icon="@drawable/google__1_"
        app:iconTint="#273840"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintMarginEnd="39dp"
        app:layout_constraintMarginStart="39dp"
        app:layout_constraintMarginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:strokeColor="#273840"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/or_sign_up_with"
        android:textAlignment="center"
        android:textColor="#273840"
        android:textSize="18sp"
        android:fontFamily="@font/akaya_telivigala"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintMarginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button1" />

</androidx.constraintlayout.widget.ConstraintLayout>
